# allison-development-environment

./: CLAUDE.md  README.md  _config.yml  index.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: jekyll-gh-pages.yml  pages.yml
hello_world/: pyproject.toml
public/: index.html
public/fresh-advisor/: VISION.md  app.js  data.js  index.html  styles.css
supply_chain_marketplace/: index.html  pyproject.toml
supply_chain_marketplace/src/supply_chain_marketplace/: __init__.py
